--- a/index.html
+++ b/index.html
@@ -1783,12 +1783,12 @@ box-shadow: var(--shadow-md);
         transform: rotateY(0deg) rotateX(0deg) scale(1.05);
         filter: brightness(1.2) blur(0);
     }
-    95% {  /* Changed from 85% to 95% - text stays visible almost the entire 7 seconds */
+    70%% {  /* Changed from 85% to 95% - text stays visible almost the entire 7 seconds */
         opacity: 1;
         transform: rotateY(0deg) rotateX(0deg) scale(1);
     }
     100% {
-        opacity: 0;
+        opacity: 1;
         transform: rotateY(-90deg) rotateX(-30deg) scale(0.5);
         filter: brightness(0) blur(30px);
     }
