--- a/index.html
+++ b/index.html
@@ -1675,293 +1675,251 @@ box-shadow: var(--shadow-md);
    ============================================ */
 
 /* Scene 1: EMAIL MARKETING - Starts at 0s, stays until 5s */
+/* ===================== */
+/* SCENE 1: EMAIL MARKETING */
+/* ===================== */
 .trailer-container.playing .scene-1 {
     visibility: visible;
-    animation: scene1-explosive-entry 5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: radial-gradient(circle at center, rgba(99, 102, 241, 0.2), rgba(236, 72, 153, 0.1), transparent);
+    animation: scene1-explosive-entry 5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    background: radial-gradient(circle at center,
+        rgba(99, 102, 241, 0.18),
+        rgba(236, 72, 153, 0.08),
+        transparent
+    );
 }
 
 @keyframes scene1-explosive-entry {
     0% {
         opacity: 0;
-        transform: scale(2) rotate(5deg);
-        filter: brightness(3) blur(20px);
+        transform: scale(1.4) translateY(60px);
+        filter: brightness(1.8) blur(25px);
     }
-    10% {  /* Takes 0.5s to appear */
+    15% {
         opacity: 1;
-        filter: brightness(1.5) blur(5px);
+        filter: brightness(1.2) blur(6px);
     }
-    20% {  /* Settled at 1s */
-        transform: scale(1) rotate(0deg);
-        filter: brightness(1) blur(0px);
+    30% {
+        transform: scale(1.02) translateY(-6px);
+        filter: brightness(1) blur(0);
     }
-    90% {  /* Stays visible until 4.5s */
+    85% {
         opacity: 1;
         transform: scale(1);
     }
-    100% {  /* Fades out at 5s */
+    100% {
         opacity: 0;
-        transform: scale(0.8) translateY(-50px);
-        filter: brightness(0.5);
+        transform: scale(0.96) translateY(-40px);
+        filter: brightness(0.9);
     }
 }
 
-
+/* Scene 1 Text */
 .trailer-container.playing .scene-1 .trailer-title {
-    animation: title-slam 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    opacity: 1; /* Force stay visible */
+    animation: title-slam 0.9s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
 @keyframes title-slam {
     0% {
         opacity: 0;
-        transform: translateY(100px) scale(0.5);
-        filter: blur(10px);
+        transform: translateY(80px) scale(0.85);
+        filter: blur(12px);
     }
-    50% {
-        transform: translateY(-10px) scale(1.1);
+    70% {
+        transform: translateY(-4px) scale(1.03);
     }
     100% {
-        opacity: 1; /* Stay at 1 */
+        opacity: 1;
         transform: translateY(0) scale(1);
         filter: blur(0);
     }
 }
 
 .trailer-container.playing .scene-1 .trailer-tag {
-    animation: tag-slide 0.6s 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) both;
-    opacity: 1; /* Force stay visible */
+    animation: tag-slide 0.7s 0.3s cubic-bezier(0.22, 1, 0.36, 1) both;
 }
 
 @keyframes tag-slide {
-    0% {
+    from {
         opacity: 0;
-        transform: translateX(-100px) rotate(-10deg);
+        transform: translateX(-60px);
     }
-    100% {
-        opacity: 1; /* Stay at 1 */
-        transform: translateX(0) rotate(0deg);
+    to {
+        opacity: 1;
+        transform: translateX(0);
     }
 }
 
 .trailer-container.playing .scene-1 .trailer-subtitle {
-    animation: subtitle-fade 0.8s 0.5s ease-out both;
-    opacity: 1; /* Force stay visible */
+    animation: subtitle-fade 0.9s 0.5s cubic-bezier(0.22, 1, 0.36, 1) both;
 }
 
 @keyframes subtitle-fade {
-    0% {
+    from {
         opacity: 0;
-        transform: translateY(30px);
-        letter-spacing: 10px;
+        transform: translateY(24px);
+        letter-spacing: 8px;
     }
-    100% {
-        opacity: 1; /* Stay at 1 */
+    to {
+        opacity: 1;
         transform: translateY(0);
-        letter-spacing: 5px;
+        letter-spacing: 4px;
     }
 }
 
-/* Scene 2: VISUAL DESIGN - 3D Rotation + Shatter Effect */
-/* Scene 2: VISUAL DESIGN - 3D Rotation + Shatter Effect (TEXT STAYS LONGER) */
+/* ===================== */
+/* SCENE 2: VISUAL DESIGN (APPLE 3D) */
+/* ===================== */
 .trailer-container.playing .scene-2 {
     visibility: visible;
-    animation: scene2-3d-rotate 7s 5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: linear-gradient(135deg, rgba(236, 72, 153, 0.15), rgba(59, 130, 246, 0.15));
     transform-style: preserve-3d;
-    perspective: 1000px;
+    animation: scene2-3d-rotate 7s 5s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    background: linear-gradient(135deg,
+        rgba(236, 72, 153, 0.12),
+        rgba(59, 130, 246, 0.12)
+    );
 }
 
 @keyframes scene2-3d-rotate {
     0% {
         opacity: 0;
-        transform: rotateY(90deg) rotateX(30deg) scale(0.5);
-        filter: brightness(0) blur(30px);
-    }
-    15% {
-        opacity: 1;
-        transform: rotateY(0deg) rotateX(0deg) scale(1.05);
-        filter: brightness(1.2) blur(0);
-    }
-    70%% {  /* Changed from 85% to 95% - text stays visible almost the entire 7 seconds */
-        opacity: 1;
-        transform: rotateY(0deg) rotateX(0deg) scale(1);
-    }
-    100% {
-        opacity: 1;
-        transform: rotateY(-90deg) rotateX(-30deg) scale(0.5);
-        filter: brightness(0) blur(30px);
-    }
-}
-
-/* Scene 2 Text - Typewriter + Glitch */
-.trailer-container.playing .scene-2 .trailer-title {
-    animation: title-glitch 1.2s 5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    opacity: 1;
-}
-
-@keyframes title-glitch {
-    0%, 5%, 10%, 15% {
-        opacity: 0;
-        transform: translate(0, 0) skew(0deg);
-    }
-    6%, 11% {
-        opacity: 1;
-        transform: translate(-5px, 2px) skew(-2deg);
-        filter: hue-rotate(90deg);
-    }
-    7%, 12% {
-        transform: translate(5px, -2px) skew(2deg);
-        filter: hue-rotate(-90deg);
+        transform: rotateY(65deg) rotateX(20deg) translateZ(-200px) scale(0.92);
+        filter: blur(30px) brightness(0.8);
     }
     20% {
         opacity: 1;
-        transform: translate(0, 0) skew(0deg);
-        filter: hue-rotate(0deg);
+        transform: rotateY(0deg) rotateX(0deg) translateZ(0) scale(1.02);
+        filter: blur(6px) brightness(1.1);
+    }
+    75% {
+        opacity: 1;
+        transform: rotateY(0) rotateX(0) scale(1);
+        filter: blur(0);
     }
     100% {
-        opacity: 1; /* Stay at 1 */
-        transform: translate(0, 0) skew(0deg);
+        opacity: 0;
+        transform: rotateY(-60deg) rotateX(-15deg) translateZ(-200px) scale(0.95);
+        filter: blur(24px) brightness(0.8);
+    }
+}
+
+/* Scene 2 Text */
+.trailer-container.playing .scene-2 .trailer-title {
+    animation: title-glitch 1.4s 5.4s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+}
+
+@keyframes title-glitch {
+    0%, 8%, 16% {
+        opacity: 0;
+    }
+    10%, 18% {
+        opacity: 1;
+        transform: translateX(-4px);
+        filter: hue-rotate(40deg);
+    }
+    12%, 20% {
+        transform: translateX(4px);
+        filter: hue-rotate(-40deg);
+    }
+    30%, 100% {
+        opacity: 1;
+        transform: none;
+        filter: none;
     }
 }
 
 .trailer-container.playing .scene-2 .trailer-tag {
-    animation: tag-pop 0.5s 5.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) both;
-    opacity: 1;
+    animation: tag-pop 0.6s 5.6s cubic-bezier(0.22, 1, 0.36, 1) both;
 }
 
 .trailer-container.playing .scene-2 .trailer-tag:nth-child(3) {
-    animation-delay: 5.7s;
-    opacity: 1;
+    animation-delay: 5.8s;
 }
 
-
 @keyframes tag-pop {
-    0% {
+    from {
         opacity: 0;
-        transform: scale(0) rotate(180deg);
+        transform: scale(0.7);
     }
     70% {
-        transform: scale(1.2) rotate(-10deg);
+        transform: scale(1.05);
     }
-    100% {
-        opacity: 1; /* Stay at 1 */
-        transform: scale(1) rotate(0deg);
+    to {
+        opacity: 1;
+        transform: scale(1);
     }
 }
 
 .trailer-container.playing .scene-2 .trailer-subtitle {
-    animation: subtitle-fade-2 0.8s 6s ease-out both;
-    opacity: 1;
+    animation: subtitle-fade-2 0.9s 6s cubic-bezier(0.22, 1, 0.36, 1) both;
 }
 
 @keyframes subtitle-fade-2 {
-    0% {
+    from {
         opacity: 0;
-        transform: translateY(30px);
-        letter-spacing: 10px;
+        transform: translateY(20px);
+        letter-spacing: 8px;
     }
-    100% {
-        opacity: 1; /* Stay at 1 */
+    to {
+        opacity: 1;
         transform: translateY(0);
-        letter-spacing: 5px;
+        letter-spacing: 4px;
     }
 }
 
-/* Scene 3: SEO & CONTENT - Matrix Rain Effect */
+/* ===================== */
+/* SCENE 3: SEO & CONTENT */
+/* ===================== */
 .trailer-container.playing .scene-3 {
     visibility: visible;
-    animation: scene3-epic-reveal 4s 12s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: radial-gradient(circle at center, rgba(255, 184, 77, 0.25), rgba(99, 102, 241, 0.1), transparent);
+    animation: scene3-matrix 4s 12s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+    background: radial-gradient(circle at center,
+        rgba(255, 184, 77, 0.22),
+        rgba(99, 102, 241, 0.08),
+        transparent
+    );
 }
-
 
 @keyframes scene3-matrix {
     0% {
         opacity: 0;
-        transform: translateZ(-500px) scale(0.5);
-        filter: brightness(0) contrast(0);
+        transform: translateZ(-300px) scale(0.9);
+        filter: blur(18px);
     }
-    10% {
+    20%, 80% {
         opacity: 1;
         transform: translateZ(0) scale(1);
-        filter: brightness(1.5) contrast(1.2);
-    }
-    15%, 85% {
-        opacity: 1;
-        transform: translateZ(0) scale(1);
-        filter: brightness(1) contrast(1);
-    }
-    100% {
-        opacity: 0;
-        transform: translateZ(500px) scale(2);
-        filter: brightness(3) contrast(0);
-    }
-}
-
-/* Scene 3 Text - Digital Assemble */
-.trailer-container.playing .scene-3 .trailer-title {
-    animation: title-digital-assemble 1.5s 10.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-}
-
-@keyframes title-digital-assemble {
-    0% {
-        opacity: 0;
-        transform: scaleY(0) translateY(-100px);
-        filter: blur(20px);
-        letter-spacing: 50px;
-    }
-    50% {
-        letter-spacing: 10px;
-    }
-    100% {
-        opacity: 1;
-        transform: scaleY(1) translateY(0);
         filter: blur(0);
-        letter-spacing: 3px;
-    }
-}
-
-.trailer-container.playing .scene-3 .trailer-subtitle {
-    animation: subtitle-scan 2s 11s ease-out both;
-}
-
-@keyframes subtitle-scan {
-    0% {
-        opacity: 0;
-        clip-path: inset(0 100% 0 0);
-    }
-    50% {
-        opacity: 1;
     }
     100% {
-        opacity: 1;
-        clip-path: inset(0 0 0 0);
+        opacity: 0;
+        transform: translateZ(300px) scale(1.05);
+        filter: blur(16px);
     }
 }
 
-/* Scene 4: FINAL REVEAL - Epic Entrance */
+/* ===================== */
+/* SCENE 4: FINAL REVEAL */
+/* ===================== */
 .trailer-container.playing .scene-4 {
     visibility: visible;
-    animation: scene4-epic-reveal 4s 20s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-    background: radial-gradient(circle at center, rgba(255, 184, 77, 0.25), rgba(99, 102, 241, 0.1), transparent);
+    animation: scene4-epic-reveal 4s 20s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
 @keyframes scene4-epic-reveal {
     0% {
         opacity: 0;
-        transform: scale(0.3);
-        filter: brightness(5) blur(50px);
+        transform: scale(0.85);
+        filter: blur(40px) brightness(1.5);
     }
-    30% {
+    35% {
         opacity: 1;
-        transform: scale(1.1);
-        filter: brightness(1.5) blur(0);
+        transform: scale(1.02);
+        filter: blur(4px);
     }
     100% {
         opacity: 1;
         transform: scale(1);
-        filter: brightness(1) blur(0);
+        filter: blur(0);
     }
 }
 
