--- a/index.html
+++ b/index.html
@@ -2731,125 +2731,237 @@ body.loaded::before {
 /* ============================================
    FAST SLIDESHOW ANIMATIONS
    ============================================ */
-
-/* Slide 1 Animation (0s - 1.5s) */
-/* Replace the existing slide animation timings with these: */
-
-/* Slide 1 Animation (0s - 3.5s) - SLOWER */
+/* Slide 1: LIQUID MORPH ENTRY (0s - 3.5s) */
 .slideshow-loader.active .slide-1 {
-    animation: slide-in-out 3.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: liquid-morph-in 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               liquid-morph-out 0.8s 2.7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-1 .slide-icon {
-    animation: icon-zoom 1s cubic-bezier(0.16, 1, 0.3, 1) forwards, icon-float 3s 1s ease-in-out infinite;
+    animation: hyperspace-zoom 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               icon-float 3s 0.8s ease-in-out infinite;
 }
 
 .slideshow-loader.active .slide-1 .slide-title {
-    animation: text-slide 0.8s 0.3s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: prism-split 1s 0.3s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-desc {
-    animation: text-fade 0.7s 0.6s ease both;
+    animation: wave-distort-in 0.8s 0.6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(1) {
-    animation: tag-pop 0.5s 0.9s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.6s 0.9s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(2) {
-    animation: tag-pop 0.5s 1.1s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.6s 1.1s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(3) {
-    animation: tag-pop 0.5s 1.3s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.6s 1.3s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
-/* Slide 2 Animation (3.5s - 7s) - SLOWER */
+/* Slide 2: CUBE ROTATION 3D (3.5s - 7s) */
 .slideshow-loader.active .slide-2 {
-    animation: slide-in-out 3.5s 3.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: cube-rotate-in 1s 3.5s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               cube-rotate-out 0.8s 6.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-2 .slide-icon {
-    animation: icon-rotate 1s 3.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: kaleidoscope 1.2s 3.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-2 .slide-title {
-    animation: text-glitch 1s 4s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: paper-fold 0.8s 4.2s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-desc {
-    animation: text-fade 0.7s 4.5s ease both;
+    animation: wave-distort-in 0.7s 4.7s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-tag {
-    animation: tag-wave 0.6s 4.9s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 0.5s 5s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-tag:nth-child(2) {
-    animation-delay: 5.1s;
+    animation-delay: 5.2s;
 }
 
-/* Slide 3 Animation (7s - 10.5s) - SLOWER */
+/* Slide 3: SHATTER & PARTICLE EXPLOSION (7s - 10.5s) */
 .slideshow-loader.active .slide-3 {
-    animation: slide-in-out 3.5s 7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: ripple-water 1s 7s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               shatter-glass 0.8s 9.7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-3 .slide-icon {
-    animation: icon-bounce 1s 7.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: particle-explode 0.8s 7.3s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               icon-float 3s 8.1s ease-in-out infinite;
 }
 
 .slideshow-loader.active .slide-3 .slide-title {
-    animation: text-type 1s 7.5s steps(15) both;
+    animation: prism-split 0.9s 7.6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-desc {
-    animation: text-fade 0.7s 8s ease both;
+    animation: hyperspace-zoom 0.7s 8.2s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-tag {
-    animation: tag-flip 0.6s 8.4s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.5s 8.6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-tag:nth-child(2) {
-    animation-delay: 8.6s;
-}
-
-.slideshow-loader.active .slide-3 .slide-tag:nth-child(3) {
     animation-delay: 8.8s;
 }
 
-/* Slide 4 Animation (10.5s - 15s) - SLOWER, STAYS LONGER */
+.slideshow-loader.active .slide-3 .slide-tag:nth-child(3) {
+    animation-delay: 9s;
+}
+
+/* Slide 4: FINAL REVEAL - ULTIMATE MORPH (10.5s - 15s) */
 .slideshow-loader.active .slide-4 {
-    animation: slide-final 4.5s 10.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: kaleidoscope 1.5s 10.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-4 .slide-profile {
-    animation: profile-zoom 1.5s 11s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: liquid-morph-in 1.8s 11s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-4 .slide-name {
-    animation: name-reveal 1.2s 12s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: prism-split 1.3s 12.2s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-tagline {
-    animation: text-fade 1s 12.8s ease both;
+    animation: wave-distort-in 1s 13s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(1) {
-    animation: stat-count 1s 13.3s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 0.8s 13.5s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(2) {
-    animation: stat-count 1s 13.6s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 0.8s 13.8s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(3) {
-    animation: stat-count 1s 13.9s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 0.8s 14.1s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
-/* Progress Bar Animation - SLOWER */
-.slideshow-loader.active .slideshow-progress-bar {
-    animation: progress-fill 15s linear forwards; /* Changed from 7s to 15s */
+/* ADD PARTICLE EFFECTS */
+.slideshow-slide::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at var(--mouse-x, 50%) var(--mouse-y, 50%), 
+                rgba(255, 255, 255, 0.1) 0%, 
+                transparent 50%);
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    z-index: 10;
+}
+
+.slideshow-slide:hover::before {
+    opacity: 1;
+}
+
+/* CHROMATIC ABERRATION EFFECT */
+.slideshow-loader.active .slide-1 .slide-title,
+.slideshow-loader.active .slide-2 .slide-title,
+.slideshow-loader.active .slide-3 .slide-title {
+    position: relative;
+}
+
+.slideshow-loader.active .slide-1 .slide-title::before,
+.slideshow-loader.active .slide-2 .slide-title::before,
+.slideshow-loader.active .slide-3 .slide-title::before {
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: cyan;
+    mix-blend-mode: screen;
+    animation: chromatic-glitch 0.3s infinite;
+}
+
+@keyframes chromatic-glitch {
+    0% { transform: translate(0, 0); }
+    20% { transform: translate(-2px, 2px); }
+    40% { transform: translate(2px, -2px); }
+    60% { transform: translate(-2px, -2px); }
+    80% { transform: translate(2px, 2px); }
+    100% { transform: translate(0, 0); }
+}
+
+/* LENS FLARE EFFECT */
+.slideshow-slide::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: radial-gradient(circle, 
+        rgba(255, 255, 255, 0.8) 0%, 
+        rgba(255, 255, 255, 0.3) 20%,
+        transparent 50%);
+    opacity: 0;
+    pointer-events: none;
+    animation: lens-flare 4s ease-in-out infinite;
+    z-index: 5;
+}
+
+@keyframes lens-flare {
+    0%, 100% {
+        opacity: 0;
+        transform: translate(-100%, -100%);
+    }
+    50% {
+        opacity: 0.6;
+        transform: translate(50%, 50%);
+    }
+}
+
+/* ENHANCE WITH GLOW PULSES */
+.slideshow-loader.active .slide-icon {
+    filter: drop-shadow(0 0 30px currentColor);
+    animation: glow-pulse 2s ease-in-out infinite;
+}
+
+@keyframes glow-pulse {
+    0%, 100% {
+        filter: drop-shadow(0 0 20px currentColor) brightness(1);
+    }
+    50% {
+        filter: drop-shadow(0 0 60px currentColor) brightness(1.5);
+    }
+}
+
+/* 3D DEPTH PARALLAX */
+.slideshow-loader.active .slide-content {
+    transform-style: preserve-3d;
+}
+
+.slideshow-loader.active .slide-icon {
+    transform: translateZ(100px);
+}
+
+.slideshow-loader.active .slide-title {
+    transform: translateZ(50px);
+}
+
+.slideshow-loader.active .slide-desc {
+    transform: translateZ(30px);
+}
+
+.slideshow-loader.active .slide-tags {
+    transform: translateZ(20px);
 }
 
 @keyframes progress-fill {
@@ -3104,6 +3216,255 @@ body.cinematic-mode .start-overlay {
     display: flex !important;
     visibility: visible !important;
     opacity: 1 !important;
+}
+
+/* ============================================
+   ULTRA PREMIUM SLIDESHOW - MORPHING & VFX
+   ============================================ */
+
+/* Add these NEW animations to your CSS */
+
+/* MORPHING LIQUID TRANSITIONS */
+@keyframes liquid-morph-in {
+    0% {
+        opacity: 0;
+        clip-path: circle(0% at 50% 50%);
+        filter: blur(40px) brightness(2);
+        transform: scale(1.5) rotate(10deg);
+    }
+    50% {
+        clip-path: ellipse(70% 100% at 30% 50%);
+        filter: blur(8px) brightness(1.3);
+    }
+    100% {
+        opacity: 1;
+        clip-path: circle(150% at 50% 50%);
+        filter: blur(0) brightness(1);
+        transform: scale(1) rotate(0deg);
+    }
+}
+
+@keyframes liquid-morph-out {
+    0% {
+        opacity: 1;
+        clip-path: circle(150% at 50% 50%);
+        filter: blur(0) brightness(1);
+    }
+    50% {
+        clip-path: polygon(0% 0%, 100% 0%, 80% 100%, 20% 100%);
+        filter: blur(5px) brightness(1.2);
+    }
+    100% {
+        opacity: 0;
+        clip-path: circle(0% at 50% 50%);
+        filter: blur(30px) brightness(0.5);
+        transform: scale(0.8) rotate(-10deg);
+    }
+}
+
+/* PARTICLE EXPLOSION TRANSITION */
+@keyframes particle-explode {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+        filter: blur(0);
+    }
+    50% {
+        transform: scale(1.3);
+        filter: blur(15px) brightness(1.5);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(2) rotate(20deg);
+        filter: blur(50px) brightness(0);
+    }
+}
+
+/* CUBE ROTATION 3D TRANSITION */
+@keyframes cube-rotate-in {
+    0% {
+        opacity: 0;
+        transform: perspective(1000px) rotateY(-90deg) rotateX(30deg) translateZ(-300px);
+        filter: blur(20px);
+    }
+    100% {
+        opacity: 1;
+        transform: perspective(1000px) rotateY(0deg) rotateX(0deg) translateZ(0);
+        filter: blur(0);
+    }
+}
+
+@keyframes cube-rotate-out {
+    0% {
+        opacity: 1;
+        transform: perspective(1000px) rotateY(0deg) rotateX(0deg) translateZ(0);
+    }
+    100% {
+        opacity: 0;
+        transform: perspective(1000px) rotateY(90deg) rotateX(-30deg) translateZ(-300px);
+        filter: blur(20px);
+    }
+}
+
+/* WAVE DISTORTION EFFECT */
+@keyframes wave-distort-in {
+    0% {
+        opacity: 0;
+        clip-path: polygon(
+            0% 0%, 100% 0%,
+            100% 100%, 0% 100%
+        );
+        filter: blur(20px) hue-rotate(180deg);
+        transform: translateY(100%) skewY(10deg);
+    }
+    50% {
+        clip-path: polygon(
+            0% 10%, 100% 0%,
+            100% 90%, 0% 100%
+        );
+        filter: blur(8px) hue-rotate(90deg);
+    }
+    100% {
+        opacity: 1;
+        clip-path: polygon(
+            0% 0%, 100% 0%,
+            100% 100%, 0% 100%
+        );
+        filter: blur(0) hue-rotate(0deg);
+        transform: translateY(0) skewY(0deg);
+    }
+}
+
+/* SHATTER GLASS EFFECT */
+@keyframes shatter-glass {
+    0% {
+        opacity: 1;
+        filter: blur(0);
+    }
+    20% {
+        transform: scale(1.05);
+    }
+    40% {
+        opacity: 0.8;
+        filter: blur(3px);
+        clip-path: polygon(
+            0% 0%, 50% 0%, 50% 50%, 0% 50%,
+            50% 50%, 100% 50%, 100% 100%, 50% 100%
+        );
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0.5) rotate(45deg);
+        filter: blur(40px);
+    }
+}
+
+/* ZOOM BLUR HYPERSPACE */
+@keyframes hyperspace-zoom {
+    0% {
+        opacity: 0;
+        transform: scale(0.1) translateZ(-1000px);
+        filter: blur(100px) brightness(3);
+    }
+    50% {
+        filter: blur(20px) brightness(1.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1) translateZ(0);
+        filter: blur(0) brightness(1);
+    }
+}
+
+/* RIPPLE WATER EFFECT */
+@keyframes ripple-water {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+        filter: blur(30px);
+        border-radius: 50%;
+    }
+    30% {
+        border-radius: 40%;
+        filter: blur(10px);
+    }
+    60% {
+        border-radius: 30%;
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+        filter: blur(0);
+        border-radius: 0%;
+    }
+}
+
+/* PRISM LIGHT SPLIT */
+@keyframes prism-split {
+    0% {
+        opacity: 0;
+        filter: blur(40px) hue-rotate(0deg) brightness(2);
+        transform: translateX(-100%) rotateZ(-45deg) scale(0.5);
+    }
+    25% {
+        filter: blur(20px) hue-rotate(90deg) brightness(1.5);
+    }
+    50% {
+        filter: blur(10px) hue-rotate(180deg) brightness(1.2);
+    }
+    75% {
+        filter: blur(5px) hue-rotate(270deg);
+    }
+    100% {
+        opacity: 1;
+        filter: blur(0) hue-rotate(360deg) brightness(1);
+        transform: translateX(0) rotateZ(0deg) scale(1);
+    }
+}
+
+/* KALEIDOSCOPE ROTATE */
+@keyframes kaleidoscope {
+    0% {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.3);
+        filter: blur(50px) hue-rotate(0deg) saturate(3);
+    }
+    25% {
+        transform: rotate(90deg) scale(0.6);
+        filter: blur(30px) hue-rotate(90deg) saturate(2);
+    }
+    50% {
+        transform: rotate(180deg) scale(0.9);
+        filter: blur(15px) hue-rotate(180deg) saturate(1.5);
+    }
+    75% {
+        transform: rotate(270deg) scale(1.05);
+        filter: blur(5px) hue-rotate(270deg) saturate(1.2);
+    }
+    100% {
+        opacity: 1;
+        transform: rotate(360deg) scale(1);
+        filter: blur(0) hue-rotate(360deg) saturate(1);
+    }
+}
+
+/* FOLD PAPER TRANSITION */
+@keyframes paper-fold {
+    0% {
+        opacity: 0;
+        transform: perspective(1000px) rotateX(-90deg) translateY(50%);
+        transform-origin: top;
+        filter: blur(10px);
+    }
+    50% {
+        transform: perspective(1000px) rotateX(-45deg) translateY(25%);
+        filter: blur(5px);
+    }
+    100% {
+        opacity: 1;
+        transform: perspective(1000px) rotateX(0deg) translateY(0);
+        filter: blur(0);
+    }
 }
 
 </style>
