--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
             max-width: 1400px;
         }
         
-        .hero-subtitle {
+    .hero-subtitle {
     font-size: 16px;
     font-weight: 700;
     color: #000;
     letter-spacing: 4px;
     text-transform: uppercase;
-    margin-bottom: 40px;  /* Changed from 100px to 40px */
+    margin-bottom: 120px;  /* INCREASED from 40px to 120px */
     font-family: 'Montserrat', sans-serif;
     position: relative;
     z-index: 3;
@@ -2731,121 +2731,125 @@ body.loaded::before {
 /* ============================================
    FAST SLIDESHOW ANIMATIONS
    ============================================ */
-/* Slide 1: LIQUID MORPH ENTRY (0s - 3.5s) */
+//* ============================================
+   SLOW & SMOOTH SLIDESHOW ANIMATIONS
+   ============================================ */
+
+/* Slide 1: LIQUID MORPH ENTRY (0s - 5s) - SLOWER */
 .slideshow-loader.active .slide-1 {
-    animation: liquid-morph-in 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards,
-               liquid-morph-out 0.8s 2.7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: liquid-morph-in 1.8s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               liquid-morph-out 1.2s 3.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-1 .slide-icon {
-    animation: hyperspace-zoom 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards,
-               icon-float 3s 0.8s ease-in-out infinite;
+    animation: hyperspace-zoom 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               icon-float 3s 1.2s ease-in-out infinite;
 }
 
 .slideshow-loader.active .slide-1 .slide-title {
-    animation: prism-split 1s 0.3s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: prism-split 1.5s 0.5s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-desc {
-    animation: wave-distort-in 0.8s 0.6s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: wave-distort-in 1.2s 0.9s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(1) {
-    animation: ripple-water 0.6s 0.9s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.9s 1.3s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(2) {
-    animation: ripple-water 0.6s 1.1s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.9s 1.6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-1 .slide-tag:nth-child(3) {
-    animation: ripple-water 0.6s 1.3s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.9s 1.9s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
-/* Slide 2: CUBE ROTATION 3D (3.5s - 7s) */
+/* Slide 2: CUBE ROTATION 3D (5s - 10s) - SLOWER */
 .slideshow-loader.active .slide-2 {
-    animation: cube-rotate-in 1s 3.5s cubic-bezier(0.16, 1, 0.3, 1) forwards,
-               cube-rotate-out 0.8s 6.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: cube-rotate-in 1.5s 5s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               cube-rotate-out 1.2s 8.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-2 .slide-icon {
-    animation: kaleidoscope 1.2s 3.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: kaleidoscope 1.8s 5.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-2 .slide-title {
-    animation: paper-fold 0.8s 4.2s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: paper-fold 1.2s 6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-desc {
-    animation: wave-distort-in 0.7s 4.7s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: wave-distort-in 1s 6.8s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-tag {
-    animation: hyperspace-zoom 0.5s 5s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 0.8s 7.2s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-2 .slide-tag:nth-child(2) {
-    animation-delay: 5.2s;
+    animation-delay: 7.5s;
 }
 
-/* Slide 3: SHATTER & PARTICLE EXPLOSION (7s - 10.5s) */
+/* Slide 3: SHATTER & PARTICLE EXPLOSION (10s - 15s) - SLOWER */
 .slideshow-loader.active .slide-3 {
-    animation: ripple-water 1s 7s cubic-bezier(0.16, 1, 0.3, 1) forwards,
-               shatter-glass 0.8s 9.7s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: ripple-water 1.5s 10s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               shatter-glass 1.2s 13.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-3 .slide-icon {
-    animation: particle-explode 0.8s 7.3s cubic-bezier(0.16, 1, 0.3, 1) forwards,
-               icon-float 3s 8.1s ease-in-out infinite;
+    animation: particle-explode 1.2s 10.5s cubic-bezier(0.16, 1, 0.3, 1) forwards,
+               icon-float 3s 11.7s ease-in-out infinite;
 }
 
 .slideshow-loader.active .slide-3 .slide-title {
-    animation: prism-split 0.9s 7.6s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: prism-split 1.3s 11s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-desc {
-    animation: hyperspace-zoom 0.7s 8.2s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 1s 12s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-tag {
-    animation: ripple-water 0.5s 8.6s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: ripple-water 0.8s 12.6s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-3 .slide-tag:nth-child(2) {
-    animation-delay: 8.8s;
+    animation-delay: 12.9s;
 }
 
 .slideshow-loader.active .slide-3 .slide-tag:nth-child(3) {
-    animation-delay: 9s;
+    animation-delay: 13.2s;
 }
 
-/* Slide 4: FINAL REVEAL - ULTIMATE MORPH (10.5s - 15s) */
+/* Slide 4: FINAL REVEAL - ULTIMATE MORPH (15s - 22s) - SLOWER */
 .slideshow-loader.active .slide-4 {
-    animation: kaleidoscope 1.5s 10.5s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: kaleidoscope 2s 15s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-4 .slide-profile {
-    animation: liquid-morph-in 1.8s 11s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+    animation: liquid-morph-in 2.2s 15.8s cubic-bezier(0.16, 1, 0.3, 1) forwards;
 }
 
 .slideshow-loader.active .slide-4 .slide-name {
-    animation: prism-split 1.3s 12.2s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: prism-split 1.8s 17.5s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-tagline {
-    animation: wave-distort-in 1s 13s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: wave-distort-in 1.5s 18.8s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(1) {
-    animation: hyperspace-zoom 0.8s 13.5s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 1s 19.8s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(2) {
-    animation: hyperspace-zoom 0.8s 13.8s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 1s 20.3s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 .slideshow-loader.active .slide-4 .slide-stat:nth-child(3) {
-    animation: hyperspace-zoom 0.8s 14.1s cubic-bezier(0.16, 1, 0.3, 1) both;
+    animation: hyperspace-zoom 1s 20.8s cubic-bezier(0.16, 1, 0.3, 1) both;
 }
 
 /* ADD PARTICLE EFFECTS */
