--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     color: #000;
     letter-spacing: 4px;
     text-transform: uppercase;
-    margin-bottom: 120px;  /* INCREASED from 40px to 120px */
+    margin-bottom: 40px;  /* INCREASED from 40px to 120px */
     font-family: 'Montserrat', sans-serif;
     position: relative;
     z-index: 3;
@@ -354,7 +354,7 @@
     color: #ffb84d;  /* This solid color will show */
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
-    position: relative;
+    position: center;
     z-index: 3;  /* Higher than the image's z-index: 1 */
     line-height: 1.1;
     white-space: nowrap;
