--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     position: relative;
     width: 400px;
     height: 500px;
-    margin: 0 auto 40px;
+    margin: 0 auto -50px;
     z-index: 1;  /* Lower z-index than the title */
     pointer-events: none;
 }
@@ -350,11 +350,11 @@
     font-size: clamp(48px, 8vw, 80px); 
     font-weight: 900;
     letter-spacing: -2px;
-    margin: 0;
+    margin: 60px 0 0 0;
     color: #ffb84d;  /* This solid color will show */
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
-    position: center;
+    position: relative;
     z-index: 3;  /* Higher than the image's z-index: 1 */
     line-height: 1.1;
     white-space: nowrap;
@@ -1661,6 +1661,17 @@ box-shadow: var(--shadow-md);
     visibility: hidden; /* ADD THIS */
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
+}
+
+/* FIX: Show slideshow slides when active */
+.slideshow-loader.active .slideshow-slide {
+    visibility: visible !important;
+}
+
+/* Ensure slideshow slides start visible */
+.slideshow-slide {
+    visibility: visible;
+    opacity: 0;
 }
 
 /* Hide scenes by default - ADD THIS NEW CLASS */
