turn off slideshow

--- a/index.html
+++ b/index.html
@@ -4464,7 +4464,7 @@ body.cinematic-mode .start-overlay {
 // LOADING SCREEN CONFIGURATION
 // ============================================
 const LOADING_CONFIG = {
-    enabled: true,
+    enabled: flase,
     mode: 'slideshow',          // Options: 'cinematic' or 'slideshow'
     skipButton: true,
     autoSkipAfter: null
