--- a/index.html
+++ b/index.html
@@ -4465,9 +4465,9 @@ body.cinematic-mode .start-overlay {
 // ============================================
 const LOADING_CONFIG = {
     enabled: flase,
-    mode: 'slideshow',          // Options: 'cinematic' or 'slideshow'
-    skipButton: true,
-    autoSkipAfter: null
+    mode: 'cinematic',          // Options: 'cinematic' or 'slideshow'
+    skipButton: flase,
+    autoSkipAfter: true
 };
 
 // ============================================
