--- a/index.html
+++ b/index.html
@@ -4464,10 +4464,10 @@ body.cinematic-mode .start-overlay {
 // LOADING SCREEN CONFIGURATION
 // ============================================
 const LOADING_CONFIG = {
-    enabled: flase,
-    mode: 'cinematic',          // Options: 'cinematic' or 'slideshow'
-    skipButton: flase,
-    autoSkipAfter: true
+    enabled: false,
+    mode: 'slideshow',          // Options: 'cinematic' or 'slideshow'
+    skipButton: true,
+    autoSkipAfter: null
 };
 
 // ============================================
