--- a/index.html
+++ b/index.html
@@ -4467,7 +4467,7 @@ const LOADING_CONFIG = {
     enabled: false,
     mode: 'slideshow',          // Options: 'cinematic' or 'slideshow'
     skipButton: true,
-    autoSkipAfter: null
+    autoSkipAfter: 0.1
 };
 
 // ============================================
